[Build] Switch to official buildpack AOTCache implementation